combobox added. add logic to solicitations api to lookup issuer by sourceKey. fix scraper chart where everything is 1 day behind due to timezone differences.

--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -5,11 +5,7 @@
   width: 30px;
 }
 
-.layout {
-  font-size: 15px;
-  padding: 0;
-  padding-bottom: 0;
-
+body {
   a[href] {
     color: variables.$blue;
   }
@@ -22,6 +18,12 @@
     margin-top: 5px;
     font-size: 12px;
   }
+}
+
+.layout {
+  font-size: 15px;
+  padding: 0;
+  padding-bottom: 0;
 
   &_header {
     :global(h1) {
